<!--
  ~ Copyright (c) 2015, Nordic Semiconductor
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~ * Redistributions of source code must retain the above copyright notice, this
  ~   list of conditions and the following disclaimer.
  ~
  ~ * Redistributions in binary form must reproduce the above copyright notice,
  ~   this list of conditions and the following disclaimer in the documentation
  ~   and/or other materials provided with the distribution.
  ~
  ~ * Neither the name of copyright holder nor the names of its
  ~   contributors may be used to endorse or promote products derived from
  ~   this software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<resources>
    <string name="app_name">NetKnightController</string>
    <string name="feature_name">NetKnight</string>

    <string name="title">@string/app_name</string>

    <string name="unknown_device">Unknown Device</string>
    <string name="turn_on">On</string>
    <string name="turn_off">Off</string>
    <string name="title_led_state">LED</string>
    <string name="title_button_state">Button</string>
    <string name="state">State</string>
    <string name="button_pressed">PRESSED</string>
    <string name="button_released">RELEASED</string>
    <string name="button_unknown">UNKNOWN</string>

    <string name="location_permission_title">LOCATION PERMISSION REQUIRED</string>
    <string name="location_permission_info">From Android 6.0 Marshmallow onwards the application requires Location permission in order to scan for Bluetooth Low Energy devices.
      \n\nThis is because Bluetooth LE beacons, for example iBeacons or Eddystone, may be used to determine the phone\'s and user\'s location. <b>NetKnightController</b> will not use this information in any way.</string>
    <string name="location_permission_action">Grant permission</string>
    <string name="location_permission_settings">Settings</string>

    <string name="bluetooth_disabled_title">BLUETOOTH DISABLED</string>
    <string name="bluetooth_disabled_info">The Bluetooth adapter is turned off. Click the button below to enable it.</string>
    <string name="bluetooth_disabled_action">Enable</string>

    <string name="blinky_guide_title">CAN\'T SEE YOUR DEVICE?</string>
    <string name="blinky_guide_info">1. Make sure the DK is <b>turned on</b> and is connected to a power source using a micro USB cable or a coin cell is plugged in.
        \n\n2. Make sure your firmware and SoftDevice are flashed.</string>
    <string name="blinky_guide_location_info">3. Location is turned off. Some Android phones require it enabled in order to scan for Bluetooth LE devices.
		If you are sure your Device is advertising and it doesn\'t show up here, click the button below to enable Location.</string>
    <string name="blinky_guide_location_action">Enable</string>

    <string name="state_scanning">Scanning…</string>
    <string name="state_connecting">Connecting…</string>
    <string name="state_discovering_services">Discovering services…</string>
    <string name="state_initializing">Initializing…</string>
    <string name="state_discovering_services_completed">%s ready</string>
    <string name="state_not_supported">Device does not have required services.</string>
    <string name="state_disconnected">Device disconnected.</string>
    <string name="stop">Manual Stop</string>
    <string name="start">Manual Start</string>
    <string name="stop_random">Random Stop</string>
    <string name="start_random">Random Start</string>
    <string name="level_10">Level 10</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_4">Level 4</string>
    <string name="level_5">Level 5</string>
    <string name="level_6">Level 6</string>
    <string name="level_9">Level 9</string>
    <string name="level_8">Level 8</string>
    <string name="level_7">Level 7</string>
    <string name="turn_knob_off_to_enable">Turn knob OFF to enable</string>
</resources>
